--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint bookshelf.js src/",
     "cover": "npm run lint && npm run babel && istanbul cover _mocha -- --check-leaks -t 5000 -b -R spec test/index.js",
     "test": "npm run lint && npm run babel && mocha --check-leaks -t 5000 -b test/index.js",
-    "jsdoc": "npm run babel && ./scripts/jsdoc.sh",
-    "postinstall": "$(npm bin)/babel --version || npm install babel-cli && npm run babel"
+    "jsdoc": "npm run babel && ./scripts/jsdoc.sh"
   },
   "homepage": "http://bookshelfjs.org",
   "repository": {
